app/helloworld_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example2
  labels:
    app: example2
  namespace: dev2    
spec:
  type: NodePort
  selector:
    app: example2
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
