app/ingress_helm.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: helloword-service-ingress
    namespace: dev2
  spec:
    ingressClassName: nginx
    rules:
      - host: hello.cabd.link
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: example2
                  port: 
                    number: 80
      - host: hello2.cabd.link
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: example2
                  port: 
                    number: 80
      - host: rest.cabd.link
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: example2
                  port: 
                    number: 80
